// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrevNextBar /> should render 1`] = `
.c0 {
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
  margin-left: auto;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c2:not([disabled]):active {
  color: #fff;
  background: #0078c7;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  outline: none;
}

.c2[aria-pressed="true"] {
  color: #fff;
  background: #0068ae;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c2[aria-pressed="true"]:not([disabled]):hover,
.c2[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c2[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #003a61;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  margin-right: auto;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c1:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c1[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c1[aria-pressed="true"]:not([disabled]):hover,
.c1[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c1[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c1[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <div
    class="c0"
  >
    <button
      aria-pressed="false"
      class="c1"
      type="button"
    >
      Précédent
    </button>
    <button
      aria-pressed="false"
      class="c2"
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render disabled buttons 1`] = `
.c0 {
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
  margin-left: auto;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c2:not([disabled]):active {
  color: #fff;
  background: #0078c7;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  outline: none;
}

.c2[aria-pressed="true"] {
  color: #fff;
  background: #0068ae;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c2[aria-pressed="true"]:not([disabled]):hover,
.c2[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c2[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #003a61;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  margin-right: auto;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c1:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c1[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c1[aria-pressed="true"]:not([disabled]):hover,
.c1[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c1[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c1[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <div
    class="c0"
  >
    <button
      aria-pressed="false"
      class="c1"
      type="button"
    >
      Précédent
    </button>
    <button
      aria-pressed="false"
      class="c2"
      disabled=""
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render only next button 1`] = `
.c0 {
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
  margin-left: auto;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c2:not([disabled]):active {
  color: #fff;
  background: #0078c7;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  outline: none;
}

.c2[aria-pressed="true"] {
  color: #fff;
  background: #0068ae;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c2[aria-pressed="true"]:not([disabled]):hover,
.c2[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c2[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #003a61;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  margin-right: auto;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c1:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c1[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c1[aria-pressed="true"]:not([disabled]):hover,
.c1[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c1[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c1[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <div
    class="c0"
  >
    <button
      aria-pressed="false"
      class="c1"
      type="button"
    >
      Précédent
    </button>
    <button
      aria-pressed="false"
      class="c2"
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render only prev button 1`] = `
.c0 {
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  margin-right: auto;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c1:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c1[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c1[aria-pressed="true"]:not([disabled]):hover,
.c1[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c1[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c1[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <div
    class="c0"
  >
    <button
      aria-pressed="false"
      class="c1"
      type="button"
    >
      Précédent
    </button>
  </div>
</div>
`;
